@@ -1,3 +1,9 @@
+2004-07-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>
+
+	* [w3m-dev 04094] Re: option panel: gettextize select list
+	* rc.c (load_option_panel): don't gettext&wc_conv colorstr 
+					several times
+
 2004-07-16  WATANABE Katsuyuki <knabe@sannet.ne.jp>
 
 	* [w3m-dev 04093] bookmark charset
